# Ibrowse

./: .gitignore  .gitmodules  Cargo.toml  README.md  macos_build.spec  main.py  pyproject.toml  requirements.txt  windows_build.spec
.github/workflows/: build_macos.yaml
resources/icons/: ibrowse_icon.icns
resources/pages/: help.html  new_tab.html  startup.html  whats_new.html
resources/stylesheets/: ibrowse_dark.css
src/: imports.py  lib.rs
src/framework/: browser.rs
src/gui/: commands.py  context_menu.py  dialogs.py  engine_selector.py  inputs.py  quick_search_bar.py  search_bar.py  tab.py  tab_view.py  web_engine.py  widgets.py
src/system/: dirs.rs  file_ops.rs  mod.rs
src/user/: bookmarks.rs  data.rs  mod.rs  passwords.rs  settings.rs
