[build-system]
requires = ["maturin>=1.8.3,<2.0"]
build-backend = "maturin"

[project]
name = "ibrowse"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependencies]
maturin = "1.8.3"
rustimport = "1.7.0"

[tool.maturin]
features = ["pyo3/extension-module"]